# rusty-blog

./: Cargo.toml  Dockerfile  README.md  diesel.toml
rusty-blog-model/: Cargo.toml
rusty-blog-model/migrations/2024-04-16-132128_create_posts/: up.sql
rusty-blog-model/src/: lib.rs  main.rs  models.rs
rusty-blog-model/src/model/: models.rs  queries.rs
src/: controller.rs  lib.rs  main.rs
src/model/: models.rs
templates/: index.html  posts.html
